Added openId links so that I can use heinrichfilter.com as my openid username.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Heinrich Filter - Profile</title>
         <style type="text/css">
-            /* Buttons got from http://technology.posterous.com/make-css3-buttons-that-are-extremely-fancy  Thanks!*/
+            /* Buttons got from http://technology.posterous.com/make-css3-buttons-that-are-extremely-fancy*/
             div.fancy_button {
                 float: left;
                 border-width: 1px;
@@ -78,7 +78,7 @@
             }
             #content {
                 background-color: rgba(245,245,245,0.7);
-              	overflow: hidden;
+                overflow: hidden;
                 border: 10px solid #605A64;
                 padding: 30px;
                 width: 920px;
@@ -108,7 +108,9 @@
                 margin: auto;
             }
         </style>
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Reenie+Beanie"> 
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Reenie+Beanie">
+        <link rel="openid.server" href="http://www.myopenid.com/server">
+        <link rel="openid.delegate" href="http://heinrich-filter.myopenid.com">
     </head>
     <body>
         <div id="content">
@@ -119,26 +121,26 @@
             <br/>
             <p class="narrative">For more information:</p>
             <div id="buttons">
-            <div class="fancy_button">
-                <a href="mailto:webcv@filter.co.za">
-                    <span class="button">Email me</span>
-                </a>
-            </div>
-            <div class="fancy_button">
-                <a href="http://blog.heinrichfilter.com">
-                    <span class="button">Blog</span>
-                </a>
-            </div>
-            <div class="fancy_button">
-                <a href="http://za.linkedin.com/in/heinrichfilter">
-                    <span class="button">LinkedIn</span>
-                </a>
-            </div>
-            <div class="fancy_button">
-                <a href="http://stackoverflow.com/users/101434/heinrich-filter">
-                    <span class="button">StackOverflow</span>
-                </a>
-            </div>
+                <div class="fancy_button">
+                    <a href="mailto:webcv@filter.co.za">
+                        <span class="button">Email me</span>
+                    </a>
+                </div>
+                <div class="fancy_button">
+                    <a href="http://blog.heinrichfilter.com">
+                        <span class="button">Blog</span>
+                    </a>
+                </div>
+                <div class="fancy_button">
+                    <a href="http://za.linkedin.com/in/heinrichfilter">
+                        <span class="button">LinkedIn</span>
+                    </a>
+                </div>
+                <div class="fancy_button">
+                    <a href="http://stackoverflow.com/users/101434/heinrich-filter">
+                        <span class="button">StackOverflow</span>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
