--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 font-family: 'Reenie Beanie', arial;
                 color: #6795AF;
                 font-size: 40px;
-                margin: 0px 0px 0px 10px;
+                margin-left: 10px;
             }
             p#endNarrative {
                 margin: 0px 0px 0px 55px;
@@ -143,5 +143,18 @@
                 </div>
             </div>
         </div>
+
+        <script type="text/javascript">
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-12771678-1']);
+            _gaq.push(['_setDomainName', '.heinrichfilter.com']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+        </script>
     </body>
 </html>
