Fixed magins for narrative.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 font-family: 'Reenie Beanie', arial;
                 color: #6795AF;
                 font-size: 40px;
-                margin-left: 10px;
+                margin: 0px 0px 0px 10px;
             }
             p#endNarrative {
                 margin: 0px 0px 0px 55px;
